headline + cancel/confirm btn layout

--- a/app/src/main/res/layout/frame_wysiwyg.xml
+++ b/app/src/main/res/layout/frame_wysiwyg.xml
@@ -10,13 +10,30 @@
 
         <EditText
             android:id="@+id/edt_headline"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="35sp"/>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:text="can" />
+
+        <Button
+            android:id="@+id/btn_cfrm"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:layout_gravity=""
+            android:text="con" />
 
     </LinearLayout>
 
-    
+
     <Button
         android:id="@+id/btn_size"
         android:layout_width="1dp"
@@ -87,19 +104,8 @@
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
-        android:id="@+id/btn_cfrm"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Button" />
 
-    <Button
-        android:id="@+id/btn_cancel"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="Button" />
+
 
 
 </LinearLayout>
