--- a/app/src/main/res/layout/frame_wysiwyg.xml
+++ b/app/src/main/res/layout/frame_wysiwyg.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        >
 
         <EditText
             android:id="@+id/edt_headline"
@@ -18,13 +20,13 @@
             android:layout_height="0dp"
             android:layout_weight="1"/>
 
-        <Button
+        <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_cancel"
             android:layout_width="60dp"
             android:layout_height="match_parent"
             android:text="can" />
 
-        <Button
+        <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_cfrm"
             android:layout_width="60dp"
             android:layout_height="match_parent"
@@ -33,71 +35,85 @@
 
     </LinearLayout>
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-    <Button
+
+
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        y
+        z
+    </androidx.appcompat.widget.Toolbar>
+
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_size"
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_color"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_bgcolor"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_bold"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_italic"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_under"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_strike"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_align"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_img"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Button" />
 
-    <Button
+    <com.example.wysiwyg.EditorButton
         android:id="@+id/btn_video"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
