--- a/app/src/main/res/layout/frame_wysiwyg.xml
+++ b/app/src/main/res/layout/frame_wysiwyg.xml
@@ -55,8 +55,10 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="Button"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
         <com.example.wysiwyg.EditorButton
@@ -64,18 +66,20 @@
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="Button"
             app:layout_constraintStart_toEndOf="@+id/btn_bold"
-            tools:layout_editor_absoluteY="0dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.example.wysiwyg.EditorButton
             android:id="@+id/btn_under"
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:text="Button"
             app:layout_constraintStart_toEndOf="@+id/btn_italic"
-            tools:layout_editor_absoluteY="0dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
