needed xml layout

--- a/app/src/main/res/layout/frame_wysiwyg.xml
+++ b/app/src/main/res/layout/frame_wysiwyg.xml
@@ -112,7 +112,7 @@
             android:layout_height="54dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="2dp"
-            app:layout_constraintStart_toEndOf="@+id/btn_align"
+            app:layout_constraintStart_toEndOf="@+id/btn_insert"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
