--- a/app/src/main/res/layout/detail_doc_text.xml
+++ b/app/src/main/res/layout/detail_doc_text.xml
@@ -3,4 +3,113 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <com.example.wysiwyg.EditorButton
+            android:id="@+id/btn_bold_text"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginEnd="2dp"/>
+
+        <com.example.wysiwyg.EditorButton
+            android:id="@+id/btn_bold_italic_text"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"/>
+
+        <com.example.wysiwyg.EditorButton
+            android:id="@+id/btn_bold_underline_text"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"/>
+
+        <com.example.wysiwyg.EditorButton
+            android:id="@+id/btn_bold_strike_text"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="2dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <com.example.wysiwyg.EditorButton
+            android:id="@+id/btn_alignLeft_text"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginEnd="2dp"/>
+
+        <com.example.wysiwyg.EditorButton
+            android:id="@+id/btn_bold_alignCenter_text"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"/>
+
+
+        <com.example.wysiwyg.EditorButton
+            android:id="@+id/btn_bold_alignRight_text"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="2dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:textSize="23sp"
+            android:text="Text Size"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+        <com.example.wysiwyg.EditorButton
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginEnd="5dp"/>
+        <com.example.wysiwyg.EditorButton
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="15dp"/>
+    </LinearLayout>
+
 </LinearLayout>
