--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,22 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBackground">#ffffff</color>
+    <color name="colorTextBlack">#000000</color>
+    <color name="colorTextWhite">#ffffff</color>
+    <color name="colorTextRed">#EA2621</color>
+    <color name="colorTextBlue">#2525BA</color>
+    <color name="colorTextGreen">#146D20</color>
+    <color name="colorBackYellow">#FCC047</color>
+    <color name="colorBackGreen">#97D86C</color>
+    <color name="colorBackBlue">#709EFC</color>
+    <color name="colorBackRed">#F96E90</color>
+    <color name="colorBackGray">#9B9B9B</color>
+
+
+
+
+
+
+
 </resources>
