--- a/app/src/main/res/drawable/ic_bold.xml
+++ b/app/src/main/res/drawable/ic_bold.xml
@@ -4,62 +4,62 @@
     android:viewportWidth="54"
     android:viewportHeight="54">
   <path
-      android:pathData="M181.59,207h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C190,203.23 186.23,207 181.59,207z"
+      android:pathData="M-847.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-839,274.23 -842.77,278 -847.41,278z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M255.59,207h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C264,203.23 260.23,207 255.59,207z"
+      android:pathData="M-773.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-765,274.23 -768.77,278 -773.41,278z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M329.59,207h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C338,203.23 334.23,207 329.59,207z"
+      android:pathData="M-699.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,274.23 -694.77,278 -699.41,278z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M440.59,207h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C449,203.23 445.23,207 440.59,207z"
+      android:pathData="M-588.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-580,274.23 -583.77,278 -588.41,278z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M514.59,207h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C523,203.23 519.23,207 514.59,207z"
+      android:pathData="M-514.41,278h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-506,274.23 -509.77,278 -514.41,278z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M329.59,281h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C338,277.23 334.23,281 329.59,281z"
+      android:pathData="M-699.41,352h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,348.23 -694.77,352 -699.41,352z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M255.59,281h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C264,277.23 260.23,281 255.59,281z"
+      android:pathData="M-773.41,352h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-765,348.23 -768.77,352 -773.41,352z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M329.59,355h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C338,351.23 334.23,355 329.59,355z"
+      android:pathData="M-699.41,426h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,422.23 -694.77,426 -699.41,426z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M329.59,429h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C338,425.23 334.23,429 329.59,429z"
+      android:pathData="M-699.41,500h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-691,496.23 -694.77,500 -699.41,500z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M255.59,355h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C264,351.23 260.23,355 255.59,355z"
+      android:pathData="M-773.41,426h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-765,422.23 -768.77,426 -773.41,426z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M181.59,281h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C190,277.23 186.23,281 181.59,281z"
+      android:pathData="M-847.41,352h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-839,348.23 -842.77,352 -847.41,352z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
   <path
-      android:pathData="M181.59,355h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C190,351.23 186.23,355 181.59,355z"
+      android:pathData="M-847.41,426h-25.18c-4.64,0 -8.41,-3.77 -8.41,-8.41v-25.18c0,-4.64 3.77,-8.41 8.41,-8.41h25.18c4.64,0 8.41,3.77 8.41,8.41v25.18C-839,422.23 -842.77,426 -847.41,426z"
       android:strokeAlpha="0.571"
       android:fillColor="#A09F9F"
       android:fillAlpha="0.571"/>
@@ -76,7 +76,7 @@
       android:pathData="M-64,37h34v6h-34z"
       android:fillColor="#A09F9F"/>
   <path
-      android:pathData="M36.82,15.62c0.86,1.19 1.29,2.62 1.29,4.29c0,1.71 -0.43,3.09 -1.3,4.13c-0.48,0.58 -1.2,1.12 -2.14,1.6c1.43,0.52 2.51,1.35 3.24,2.48c0.73,1.13 1.1,2.5 1.1,4.11c0,1.66 -0.42,3.16 -1.25,4.48c-0.53,0.88 -1.19,1.61 -1.99,2.21c-0.9,0.69 -1.96,1.16 -3.17,1.41c-1.22,0.25 -2.54,0.38 -3.97,0.38H15.97V12.63h13.57C32.96,12.68 35.39,13.68 36.82,15.62zM21.57,17.51v6.19h6.83c1.22,0 2.21,-0.23 2.97,-0.7c0.76,-0.46 1.14,-1.29 1.14,-2.47c0,-1.31 -0.5,-2.17 -1.51,-2.59c-0.87,-0.29 -1.97,-0.44 -3.32,-0.44H21.57zM21.57,28.35v7.49h6.82c1.22,0 2.17,-0.17 2.84,-0.5c1.23,-0.61 1.84,-1.78 1.84,-3.5c0,-1.46 -0.6,-2.46 -1.79,-3.01c-0.67,-0.3 -1.6,-0.46 -2.81,-0.48H21.57z"
+      android:pathData="M36.34,16.18c0.82,1.13 1.22,2.49 1.22,4.07c0,1.63 -0.41,2.94 -1.24,3.92c-0.46,0.55 -1.14,1.06 -2.03,1.52c1.36,0.49 2.39,1.28 3.08,2.35c0.69,1.07 1.04,2.38 1.04,3.91c0,1.58 -0.39,3 -1.19,4.25c-0.5,0.83 -1.13,1.53 -1.89,2.1c-0.85,0.65 -1.86,1.1 -3.01,1.34C31.17,39.88 29.92,40 28.56,40H16.55V13.34h12.88C32.68,13.39 34.99,14.34 36.34,16.18zM21.87,17.97v5.88h6.48c1.16,0 2.09,-0.22 2.82,-0.66c0.72,-0.44 1.08,-1.22 1.08,-2.34c0,-1.24 -0.48,-2.06 -1.43,-2.46c-0.82,-0.28 -1.87,-0.42 -3.15,-0.42H21.87zM21.87,28.26v7.11h6.47c1.16,0 2.06,-0.16 2.7,-0.47c1.17,-0.58 1.75,-1.69 1.75,-3.33c0,-1.39 -0.57,-2.34 -1.7,-2.86c-0.63,-0.29 -1.52,-0.44 -2.66,-0.45H21.87z"
       android:strokeWidth="0.5"
       android:fillColor="#A09F9F"
       android:strokeColor="#A09F9F"/>
@@ -165,15 +165,6 @@
       android:fillColor="#00000000"
       android:strokeColor="#A09F9F"/>
   <path
-      android:pathData="M-620.42,-17.83c0.17,1.19 0.5,2.08 0.99,2.67c0.9,1.07 2.45,1.61 4.64,1.61c1.31,0 2.38,-0.14 3.2,-0.42c1.55,-0.54 2.33,-1.55 2.33,-3.03c0,-0.86 -0.38,-1.53 -1.14,-2c-0.76,-0.46 -1.97,-0.87 -3.62,-1.22l-2.82,-0.62c-2.78,-0.62 -4.68,-1.28 -5.72,-2c-1.76,-1.2 -2.64,-3.08 -2.64,-5.64c0,-2.34 0.86,-4.28 2.58,-5.82c1.72,-1.55 4.25,-2.32 7.58,-2.32c2.78,0 5.16,0.73 7.12,2.18c1.97,1.46 2.99,3.57 3.09,6.34h-5.24c-0.1,-1.57 -0.8,-2.68 -2.1,-3.34c-0.87,-0.44 -1.95,-0.65 -3.25,-0.65c-1.44,0 -2.59,0.28 -3.45,0.85c-0.86,0.57 -1.29,1.36 -1.29,2.37c0,0.93 0.42,1.63 1.27,2.09c0.54,0.3 1.7,0.66 3.47,1.08l4.58,1.08c2.01,0.47 3.51,1.11 4.51,1.89c1.55,1.23 2.33,3 2.33,5.32c0,2.38 -0.92,4.36 -2.76,5.94c-1.84,1.58 -4.45,2.36 -7.81,2.36c-3.43,0 -6.13,-0.78 -8.1,-2.33s-2.95,-3.68 -2.95,-6.4H-620.42z"
-      android:fillColor="#A09F9F"/>
-  <path
-      android:pathData="M-631,-22h32v3h-32z"
-      android:fillColor="#A09F9F"/>
-  <path
-      android:pathData="M-631,-24h32v2h-32z"
-      android:fillColor="#FFFFFF"/>
-  <path
       android:pathData="M-63,176h32v3h-32z"
       android:fillColor="#A09F9F"/>
   <path
@@ -182,4 +173,34 @@
   <path
       android:pathData="M-48.84,177.16l2.82,0.62c1.65,0.35 2.86,0.76 3.62,1.22c0.76,0.47 1.14,1.14 1.14,2c0,1.48 -0.78,2.48 -2.33,3.03c-0.82,0.28 -1.88,0.42 -3.2,0.42c-2.19,0 -3.74,-0.54 -4.64,-1.61c-0.49,-0.59 -0.82,-1.48 -0.99,-2.67h-5.2c0,2.71 0.98,4.85 2.95,6.4c1.97,1.55 4.67,2.33 8.1,2.33c3.36,0 5.96,-0.79 7.81,-2.36c1.84,-1.57 2.76,-3.55 2.76,-5.94c0,-1.9 -0.53,-3.42 -1.57,-4.59h-15.32C-51.85,176.41 -50.5,176.79 -48.84,177.16z"
       android:fillColor="#A09F9F"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M255,213h47v47h-47z"/>
+  <path
+      android:pathData="M314,213h47v47h-47z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M373,213h47v47h-47z"
+      android:fillColor="#EA2621"/>
+  <path
+      android:pathData="M429,213h47v47h-47z"
+      android:fillColor="#2525BA"/>
+  <path
+      android:pathData="M483,214h47v47h-47z"
+      android:fillColor="#146D20"/>
+  <path
+      android:pathData="M255,273h47v47h-47z"
+      android:fillColor="#FCC047"/>
+  <path
+      android:pathData="M314,273h47v47h-47z"
+      android:fillColor="#97D86C"/>
+  <path
+      android:pathData="M373,273h47v47h-47z"
+      android:fillColor="#709EFC"/>
+  <path
+      android:pathData="M429,273h47v47h-47z"
+      android:fillColor="#F96E90"/>
+  <path
+      android:pathData="M483,274h47v47h-47z"
+      android:fillColor="#9B9B9B"/>
 </vector>
