--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <!--<WebView-->
+        <!--android:id="@+id/webview"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="1">-->
+    <!--</WebView>-->
 
-
-    <!--<com.example.wysiwyg.WysiwygEditor-->
-        <!--android:id="@+id/editor"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"></com.example.wysiwyg.WysiwygEditor>-->
-
-    <WebView
-        android:id="@+id/webview"
+    <com.example.wysiwyg.WysiwygEditor
+        android:id="@+id/editor"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+    </com.example.wysiwyg.WysiwygEditor>
+
 </LinearLayout>
